fix StatusBar action buttons alignment for real

--- a/src/scss/_statusbar.scss
+++ b/src/scss/_statusbar.scss
@@ -93,7 +93,7 @@
 
 .uppy-StatusBar-actions {
   display: flex;
-  justify-content: center;
+  align-items: center;
   position: absolute;
   top: 0;
   bottom: 0;
